slider design fix,gallery content overlap fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -931,7 +931,7 @@ div.gallery:hover {
 
 .js #contactpopup {
     position: absolute;
-    top: 3em;
+    top: 30em;
     display: none;
     left:0; right:0;
 }
@@ -951,7 +951,7 @@ div.gallery:hover {
     margin: 0px;
     background-image: url(/images/header_bg_img-1.jpg);
     background-repeat: repeat;
-    padding-top: 20px;
+    padding-top: 10px;
     box-shadow: 0px 8px 10px #888888;
 }
 .top-footer li a{
@@ -1003,7 +1003,33 @@ border-radius: 5px;
 p {
     color: #3c3c3c!important;
 }
+.dropdown:hover .dropdown-menu {
+  display: block!important;
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 50px;
+  width: 50px;
+  outline: 0px;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  background-image: none;
+}
 
+.carousel-control-next-icon:after
+{
+  content: '>';
+  font-size: 45px;
+  color: #828282;
+  font-weight: 800;
+}
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 45px;
+  color: #828282;
+  font-weight: 800; 
+}
 
 /* RESPONSIVE ::::::::::::::::::::::::
 MEDIA QUERRY starts :::::::::::::::::: */
